--- a/Semestalni prace/nbproject/project.properties
+++ b/Semestalni prace/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Semestalni prace
-application.vendor=Jan
+application.title=LBoat remote
+application.vendor=Jan Trejbal
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
